--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "types": ["express"]
+    "types": ["express", "sequelize"]
   },
   "include": ["src/**/*"]
 }
