--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "npm run lint && npm run build && npm run serve",
-    "start": "node dist/server.js",
-    "build": "tsc",
-    "serve": "nodemon dist/server.js",
-    "lint": "eslint src --ext .ts --fix"
+    "start": "ts-node ./src/server.ts",
+    "dev": "npx nodemon",
+    "start:prod": "npm run build && node ./dist/src/server.js",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
@@ -42,7 +41,9 @@
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.56.0",
     "nodemon": "^3.1.0",
+    "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
   }
 }
