--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,24 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
     "module": "commonjs",
-    "target": "es2017",
+    "target": "es6",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "baseUrl": "./",
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    },
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "types": ["express", "sequelize"]
+    "types": ["express"],
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
-  "include": ["src/**/*"]
+
+  "include": [
+    "src/**/*",
+    "src/types/global.d.ts"
+  ],
+  "exclude": ["node_modules"]
 }
